# metadata-portal

./: Dockerfile  Makefile  NOTICE  README.md  asset-manifest.json  config-template.toml  config.toml  config_dev.toml  data.json  data_dev.json  index.html  package.json  spec.info
cli/: Cargo.toml
cli/src/: config.rs  export.rs  fetch.rs  main.rs  opts.rs
cli/src/chains_config/: mod.rs
cli/src/collector/: export.rs
cli/src/collector/for_tests/: expected.json
cli/src/common/: camera.rs
cli/src/signer/: mod.rs
cli/src/updater/: generate.rs  mod.rs
cli/src/utils/: camera.rs  path.rs
cli/src/verifier/: qr.rs
qr/: aleph-node_metadata_latest.apng  asset-hub-paseo_metadata_1009001.apng  asset-hub-paseo_metadata_1009002.apng  asset-hub-paseo_metadata_1009003.apng  asset-hub-paseo_metadata_2000001.apng  asset-hub-paseo_metadata_2000002.apng  asset-hub-paseo_metadata_2001000.apng  asset-hub-paseo_metadata_2004001.apng  asset-hub-paseo_metadata_latest.apng  avail_metadata_45.apng  avail_metadata_47.apng  avail_metadata_48.apng  creditcoin3_metadata_128.apng  creditcoin3_metadata_66.apng  deepbrainchain_metadata_405.apng  deepbrainchain_metadata_411.apng  deepbrainchain_metadata_413.apng  deepbrainchain_metadata_417.apng  dock-pos-main-runtime_metadata_70.apng  humanode_metadata_128.apng  kusama-acurast-parachain_metadata_23.apng  kusama-acurast-parachain_metadata_24.apng  kusama-acurast-parachain_metadata_25.apng  kusama-acurast-parachain_metadata_27.apng  kusama-acurast-parachain_metadata_31.apng  kusama-acurast-parachain_metadata_36.apng  kusama-acurast-parachain_metadata_37.apng  kusama-acurast-parachain_metadata_38.apng  kusama-acurast-parachain_metadata_39.apng  kusama-acurast-parachain_metadata_42.apng  kusama-acurast-parachain_metadata_46.apng  kusama-acurast-parachain_metadata_47.apng  kusama-acurast-parachain_metadata_48.apng  kusama-acurast-parachain_metadata_49.apng  (+259 more)
(+499 files in other folders)
